#1150 add timing_advance to opendata signal graph
